--- a/content/posts/rust/crear-un-nuevo-proyecto-en-rust.mdx
+++ b/content/posts/rust/crear-un-nuevo-proyecto-en-rust.mdx
@@ -9,6 +9,9 @@ tags:
     - rust
     - cargo
     - rustup
+relatedPosts:
+  postOne: content/posts/rust/empezando-en-rust.mdx
+  postTwo: content/posts/rust/variables-y-funciones-en-rust.mdx
 featured: false
 draft: false
 publishedAt: '2022-10-28T16:08:15.469Z'
