--- a/content/posts/rust/empezando-en-rust.mdx
+++ b/content/posts/rust/empezando-en-rust.mdx
@@ -11,6 +11,9 @@ tags:
     - rust
     - cargo
     - rustup
+relatedPosts:
+  postOne: content/posts/rust/empezando-en-rust.mdx
+  postTwo: content/posts/rust/variables-y-funciones-en-rust.mdx
 featured: false
 draft: false
 publishedAt: '2022-10-28T15:40:20.955Z'
@@ -52,4 +55,3 @@ cat some.html
    * Escribir en un archivo sin errores
 6. **Release del proyecto**
    * Construir una versión de un proyecto en Rust
-
