--- a/content/posts/rust/variables-y-funciones-en-rust.mdx
+++ b/content/posts/rust/variables-y-funciones-en-rust.mdx
@@ -1,5 +1,5 @@
 ---
-title: variables y funciones en rust
+title: Variables y funciones en rust
 summary: >-
   En este capítulo, vamos a crear una función, una variable,
 
@@ -217,8 +217,6 @@ Las variables en Rust se declaran con la palabra clave let, y luego usamos dos p
 
 Todas las variables deben ser declaradas de esta manera, a menos que el tipo de la variable pueda ser inferido por, por ejemplo, el valor de retorno de una función..
 
-
-
 Para almacenar nuestra versión arbitraria de la aplicación en una variable, vamos a declararla dentro del ámbito de la función usage().&#x20;
 
 Entonces, en lugar de hacer que println! utilice la función get\_version() para imprimir la versión, haremos que utilice nuestra variable:
@@ -259,4 +257,3 @@ fn main() {
   usage();
 }
 ```
-
