--- a/content/posts/rust/empezando-en-rust.mdx
+++ b/content/posts/rust/empezando-en-rust.mdx
@@ -14,7 +14,7 @@ tags:
 relatedPosts:
   postOne: content/posts/rust/empezando-en-rust.mdx
   postTwo: content/posts/rust/variables-y-funciones-en-rust.mdx
-featured: false
+featured: true
 draft: false
 publishedAt: '2022-10-28T15:40:20.955Z'
 ---
@@ -59,28 +59,28 @@ rustc --version
 ## Objetivos
 
 1. **Crear un nuevo proyecto en Rust**
-   * Crear un nuevo proyecto Rust en la línea de comandos sin errores.
-   * Compilar y construir un proyecto simple de Rust "Hello, World" sin errores.
+   * Crear un nuevo proyecto Rust en la línea de comandos
+   * Compilar y construir un proyecto simple de Rust "Hello, World"
 2. **Variables y funciones**
-   * Crear una función sin errores
-   * Crear una variable entera sin errores
-   * Imprimir una variable entera en la línea de comandos sin errores
+   * Crear una función
+   * Crear una variable de tipo entero
+   * Imprimir una variable de tipo entero en la línea de comandos
 3. **Strings y memoria**
-   * Crear una variable de cadena sin errores
-   * Devolver una variable de cadena desde una función sin errores
-   * Concatenar dos cadenas sin errores
-   * Imprimir una cadena en la línea de comandos sin errores
+   * Crear una variable de tipo string
+   * Devolver una variable de tipo string desde una función
+   * Concatenar dos cadenas
+   * Imprimir un string en la línea de comandos
 4. **La lógica del compilador**
    * Describir cómo funciona un compilador en general
-   * Crear un vector sin errores
-   * Leer y analizar los argumentos de la línea de comandos sin errores
-   * Implementar un bloque de coincidencia sin errores
-   * Pasar un argumento a una función sin errores
+   * Crear un vector
+   * Leer y analizar los argumentos de la línea de comandos
+   * Implementar un bloque de coincidencia
+   * Pasar un argumento a una función
 5. **Leer y escribir archivos**
-   * Abrir un archivo sin errores
-   * Leer un archivo línea por línea sin errores
+   * Abrir un archivo
+   * Leer un archivo línea por línea
    * Describir cómo funciona un compilador de Markdown
-   * Escribir en un archivo sin errores
+   * Escribir en un archivo
 6. **Release del proyecto**
    * Construir una versión de un proyecto en Rust
 
